--- a/templates/partials/profile/profile_edit.html
+++ b/templates/partials/profile/profile_edit.html
@@ -21,6 +21,9 @@
 {# Therapy & Specialties #}
 {% include 'partials/profile/sections/_therapy_specialties.html' with editable=1 standalone=1 %}
 
+{# Testing & Evaluation #}
+{% include 'partials/profile/sections/_testing_evaluation.html' with editable=1 standalone=1 %}
+
 {# Fees & Insurance #}
 {% include 'partials/profile/sections/_fees_insurance.html' with editable=1 standalone=1 %}
 
